# D2-SavePSD-ComfyUI

./: README.md  README_en.md  README_zh.md  __init__.py  install.py  nodes.py  pyproject.toml
Photoshop script/: d2_automask.jsx
img/: use_mask_manual_2.psd
